--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -21,12 +21,8 @@ X Bookmarklet
 	X Move comment bar to top - comments rev-chron below
 - User pages
   - Claim your account
-  - Most recent comments showing page titles, dates, tags
-- User Settings
-  - Profile image
-  - Enable anonymous creation of new comments (for "shared" user accounts)
-  - Friend feed and twitter account info
-- Tags
+  X Most recent comments showing page titles, dates, tags
+! Tags
 	- Record tags scores for top 10 tags each URL
 	- Recently popular tag pages (Today AND Year)
 X Design and styling
@@ -76,18 +72,23 @@ X Domain registration - map
 X Analytics setup
 X Page title customization
 X Test deployment
-- rss feeds for users, tags, all
+- RSS feeds:
+  - user activity
+  - tags
+  - home(popular)
+  - user "favorites"
+  - user+tag
 - User account
   - Claim a username by signing in
   - Require login to comment using a claimed username
   - Protects your comments from being edited or deleted by others
   - Just hide non-anonymous comments - based on vote threshold
-  - Ability to delete and edit your older comments
-  - Ability to delete and edit anonymous comments
   - Ability to mark even claimed comments as "spam/bad"
     - two (independent) votes will hide that comment from all but the author of the comment.
   - Mark URL as Spam - info-mode only AND prominently flagged as SPAM
   - Mark URL as Adult - require login and affirmation of over 18 and OK to view adult content
+  - Profile image
+  - Friend feed and twitter account info
 - Detect or mark problem domains as info-mode pages (frameset unfriendly).
 - Should not update view count when comments are added
   - Only update when referer is from another domain?
@@ -146,7 +147,7 @@ X http://tag/search engine - python dump
 - AdSense
 X urls.py - CatchAll
 - Auto-tag domains (nyt.com, e.g.)
-- Popularity flags
+- Popularity views flags/icons
   ! Up/Down Arrows
   - "New" marker
   - Base on 2x rate on next higher halfLife scale
@@ -155,7 +156,7 @@ X urls.py - CatchAll
   - iPhone (bookmarklet)
   - Other
 X JSON Date format looks funny with 1 digit dates, hours, etc.
-- Replies page for users - show follow on comments on URL's user's have shared or commented on.
+! Replies page for users - show follow on comments on URL's user's have shared or commented on.
   - Need "unfollow" capability to stop getting notified
   - Plan:
     - Use the most recent 100 comments by a user as their "following" list.
@@ -196,17 +197,20 @@ X Add slash through the 0 in the G02.ME logo (Tony Wright)
 X Add random bits to userAuth token!  (1 minute resolution only now)
 - For soft authorization on Share - don't add to Score!
 X Add title attribute to links to display where they will go in a tooltip (home, user, tag pages)
-- Reorganize login permissions to treat it globally rather than ad-hoc per function
+! Reorganize login permissions to treat it globally rather than ad-hoc per function
   - User permission levels:
     - Blocked - by IP, for abuse
-    - read-only - for search engines (detect by IP and/or user agent?)
-    - throttle anonymous - per IP
+    - Read-only - for search engines (detect by IP and/or user agent?)
+    - Throttle anonymous - per IP
       - view counts 1/IP
       - share counts 1/IP
-      - no commenting
+      - no commenting or deleting
     - Authorized user - per cookie
       - Throttle writes to 10/60
       - Detect flag
+      - Delete anonymous comments
+    - Registered user 
+    - Admin user
 - Centralize error messages and codes in one file
 - Change comment and share to POST operations only
   - Update API page
@@ -215,3 +219,18 @@ X Add title attribute to links to display where they will go in a tooltip (home,
   - All links count to get info/content
   - No more double counting analytics via /info
   - Resizing/scrolling of info box
+- Link to My Links on home page for username cookie'd users
+- Disallow 'http' as a username (mistake in posting links)
+- Import bookmarks/faves
+! Elapsed time of response
+! Share limit by user (same as view limit)
+- Hungarian for python doc
+- Viewing rates for pages (tag and home) (monthly page views extrapolation)
+  - Calc view rate with 24 hour half life
+  - Return 30x the daily view rate
+  - Write-through memcache (write when update rate drops below 1/minute)
+- Number of (and List of) "current" users
+  - Sliding window of unique user counts (by minute)
+  - show users in last 15 minutes as "current" (merge all windows)
+  - update calc once each minute - memcache
+-  
