--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -32,6 +32,7 @@ X favicon
 X favicon cached?  Can't see new one!
 - Sharing options
   - Twitter
+  - TwitterFeed
   - Friendfeed
   - Faves
   - MailTo
@@ -65,6 +66,7 @@ X Figure out if there is a work-around for NYT pages that don't like to be shown
 X Get trailing slash off of urls!
 - Widget showing number of views and shares of the current url - click to share
   - Need JSON call for lookup by url (but don't increase share count)
+- Google Gadget
 - Use google safebrowsing api to warn about viewing of unsafe urls
 X refactor - Trap all exceptions to universal error page - use django middleware
 X delete comments enabled
@@ -119,6 +121,9 @@ X comments ordered
   - Record each user key in database
   - Enable expiration of user permissions
 - Require dev key for jscript calls (registered user)
+  - Provide "private dev key" for free (up to 10 calls per day)
+  - Pay for up to N calls per day on your dev key
+  - Pay for a "public api key" - usable from a fixed set of referers.
 X About Page
 X AppEngine Logo
 X Blog - new features list
@@ -159,7 +164,7 @@ X urls.py - CatchAll
 - Option to show /user/xxx sorted by popularity (not date of last comment) 
 - Mobile
   - Bookmarklet?
-  - Simplified display
+  - Simplified and smaller display (Marcelo)
   - Test on iPhone, Windows Mobile, Blackberry, G1
 X JSON Date format looks funny with 1 digit dates, hours, etc.
 ! Replies page for users - show follow on comments on URL's user's have shared or commented on.
@@ -272,12 +277,12 @@ X Admin page timeout online! - turned off expensive querys
     - Call to Action box - stand out (bigger type/box/color/graphics)
   - Declutter the home page by moving "What is G02.me" to another page.
   - Global replace "URL" with "Link"
-- Tony feedback (see comp):
-  - Separate out username from comment box
-  - Shrink icon
-  - Remove URL on page and substitute hover over title
-  - Separate out the input form from the title/comments 
-  - Help icon to explain comment format (hover?)
+X Tony feedback (see comp):
+  X Separate out username from comment box
+  X Shrink icon
+  X Remove URL on page and substitute hover over title -> smaller font
+  X Separate out the input form from the title/comments 
+  - Help icon to explain comment format (hover?) - remove help line?
 - Enable users to make custom aliases
     - if 6 characters or less prepend '~'
     - slugify
@@ -286,3 +291,6 @@ X Admin page timeout online! - turned off expensive querys
 - Do screencast explaining what you can do with G02.ME
 - Space out rows of table on home page
 - Credit first sharer of each URL (in info and on popular pages)
+- Get more comprehensive server processing times with code in main.py (inclusive of
+  django response handling).
+- Fix timer to end of page!
